--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -8,7 +8,7 @@
 }
 
 .banner {
-    height: 97vh;
+    height: 95vh;
     width: 100%;
     background: url("../assets/images/bg-home-sm.jpg");
     background-size: cover;
@@ -22,7 +22,7 @@
     display: flex;
     flex: column;
     height: 100vh;
-    background-color: rgba(0,0,0,.4);
+    background-color: rgba(0, 0, 0, .4);
 }
 
 .texto {
@@ -30,7 +30,7 @@
     text-shadow: 0 0 6px #000;
     text-transform: uppercase;
     font-weight: bold;
-    
+
 }
 
 #buscar-opc {
@@ -46,7 +46,7 @@
     background-color: white;
     margin-top: 30px;
     padding: 15px 0 15px 0;
-    border-radius: 15px;   
+    border-radius: 15px;
     box-shadow: 3px 2px 2px #8a8a8a;
     display: flex;
     justify-content: space-evenly;
@@ -62,7 +62,7 @@
 }
 
 .form-um {
-    height:100%;
+    height: 100%;
     width: 40%;
     display: flex;
     flex-direction: column;
@@ -71,8 +71,8 @@
 }
 
 .form-dois {
-    width:40%;
-    height:100%;
+    width: 40%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -122,7 +122,7 @@
 
 
 @media (min-width: 768px) {
-    .banner{
+    .banner {
         background: url("../assets/images/bg-home-md.jpg");
         background-size: cover;
         background-repeat: no-repeat;
@@ -138,6 +138,7 @@
     .agendar-form {
         width: 60vw;
     }
+
     .inputs {
         padding-left: 20px;
     }
@@ -153,9 +154,40 @@
 }
 
 @media (max-width: 768px) {
-    .texto{
+    .texto {
         display: flex;
         text-align: center;
-        
+    }
+
+    .form-um,
+    .form-dois,
+    .buscar-btn {
+        width: 100%;
+        align-items: center;
+    }
+
+    .principal {
+        margin: 0 10px 0 10px;
+
+    }
+
+    .texto {
+        justify-content: center;
+    }
+
+    .mudanca-form,
+    .form-dois {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+
+    #origem_cidade,
+    #destino_cidade {
+        width: 70%;
+    }
+
+    .agendar-form {
+        margin-top: 200px;  
     }
 }
