--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -52,7 +52,6 @@
     justify-content: space-evenly;
     height: 100%;
 }
-
 .inputs {
     gap: 18px;
     align-items: center;
@@ -131,6 +130,10 @@
         border-top: 1px solid;
     }
 
+    .menu-desktop {
+        display: flex;
+    }
+
     .mudanca-form {
         width: 100%;
     }
@@ -157,6 +160,10 @@
     .texto {
         display: flex;
         text-align: center;
+    }
+
+    .menu-desktop {
+        display: none;
     }
 
     .form-um,
