--- a/docs/css/cadastro.css
+++ b/docs/css/cadastro.css
@@ -35,7 +35,18 @@
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
-#box-finalizar-cadastro {
+#box1 {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+}
+
+#box2 {
+    display:none;
+}
+
+#box3 {
     display:none;
     padding-top: 28px;
 }
@@ -83,7 +94,6 @@ button:hover {
 
 .button-container {
     display: flex;
-
 }
 
 #button-voltar {
@@ -110,8 +120,8 @@ button:hover {
     margin-left: 5px;
 }
 
-.button-continuar {
-    width: 322px;
+#button-continuar {
+    width: 100%;
     height: 50px;
     font-size: large;
 }
@@ -122,4 +132,40 @@ button:hover {
 
 #termos-de-uso {
     color:rgb(43, 9, 235);;
+}
+
+.switch-options {
+    width: 320px;
+    height: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    text-align: center;
+    border: 1px solid #000;
+    border-radius: 5px;
+    cursor: pointer;
+    flex-direction: column;
+    padding: 10px 0;
+}
+
+.box input {
+    border: none;
+    width: 0;
+    height: 0;
+}
+
+#s1:checked {
+    border: 2px solid #E53420;
+    border-radius: 5px;
+}
+
+.switch-options img {
+    width: 100px;
+    height: 100px;
+}
+
+#img-usuario {
+    width: 60px;
+    height: 60px;
+    margin-top: 15px;
 }
