--- a/docs/css/user-login.css
+++ b/docs/css/user-login.css
@@ -110,14 +110,17 @@
 
 @media only screen and (max-width: 768px) {
   .banner {
-    background-size: 100%;
+    background-size: 150%;
     background-repeat: no-repeat;
     background-size: cover;   
     background-position: 35%;   
   }
   .menu-login {
-    width: 450px;
-    height: 450px;
+    width: 380px;
+    height: 425px;
+    margin-left: 10px;
+    margin-right: 10px;
+  
 }
 
 .logar-senha {
@@ -128,18 +131,18 @@
 .logar-email{
   
 .logar-email input {
-    height: 20px;
-    width: 220px;
+    height: 20px;   
+    width: 200px;
 }
 .logar-senha input {
     height: 20px;
-    width: 220px;
+    width: 200px;
 }
 
 
 .controlador-login {
     width: 235px;
-    height: 175px;
+    height: 155px;
     margin-bottom: 10px;
     display: flex;  
     flex-direction: column;
@@ -150,7 +153,7 @@
 }
 
 .controlador-login input {
-    width: 100%;
+    width: 150px;
     height: 20px;
     border-radius: 5px;
     border: 1px solid #bbb;
@@ -191,7 +194,7 @@
 #btn-cadastrar {
     display: flex;
     width: 125px;
-    height: 45px;
+    height: 45px;   
     border-radius: 10px;
     justify-content: center;
     margin-top: 0px;
@@ -206,3 +209,4 @@
 }
 
  
+}
