--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -50,8 +50,9 @@
 
     #text-bm {
         text-align: center;
-        margin-top: 380px;
+        margin-top: 300px;
         width: 70%;
+        overflow: hidden;
     }
 
     #text-bt {
@@ -62,7 +63,7 @@
         font-weight: 500; 
         text-align: center;
         margin-top: 30px;
-        padding: 20px;
+        padding: 15px;
         cursor: pointer;
 }
 }
