--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -7,6 +7,7 @@
     font-family: "Montserrat", sans-serif;
 }
 
+
 .banner {
     width: 100%;
     background: url("../assets/images/bg-home-sm.jpg");
@@ -15,6 +16,7 @@
     background-position: bottom;
     overflow: auto;
     border-top: 1px solid;
+    overflow: hidden;
 }
 
 .bg-filter {
@@ -22,6 +24,7 @@
     flex: column;
     height: 100vh;
     background-color: rgba(0, 0, 0, .4);
+    overflow: hidden;
 }
 
 @media (min-width: 661px) {
@@ -50,7 +53,7 @@
 
     #text-bm {
         text-align: center;
-        margin-top: 300px;
+        margin-top: 200px;
         width: 70%;
         overflow: hidden;
     }
@@ -68,23 +71,26 @@
 }
 }
 
-@media (max-width: 660px) {
+@media (max-width: 693px) {
 
     #container-text {
         width: 100%;
         flex-direction: column;
         align-items: center;
         margin-top: 50px;   
+        overflow: hidden;
     }
 
     #text-bn {
         text-align: center;
         margin-top: 30px;
+
     }
 
     #text-bm {
         text-align: center;
         margin-top: 380px;
+        overflow: visible;
     }
 
     #text-bt {
@@ -97,5 +103,7 @@
         margin-top: 30px;
         padding: 20px;
         cursor: pointer;
+        overflow: hidden;
+        z-index: 2
     }
 }
