--- a/docs/css/cadastro.css
+++ b/docs/css/cadastro.css
@@ -21,20 +21,20 @@
     width: 100vw;
 }
 
-.container {
+.container-cadastro {
     display: flex;
-    height: (100vh - 163px);
-    margin-top: 140px;
-    width: 100vw;
     justify-content:center;
     align-items:center;
-}
+    padding-top: 125px;
+}   
 
 .box {
+    display: flex;
     width: 422px;
     height: 531px;
     background-color: #FFF;
     border-radius: 10px;
+    justify-content: space-between;
     flex-direction: column;
     padding: 20px 50px 20px 50px;   
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -45,7 +45,7 @@
     align-items: center;
     justify-content: space-between;
     flex-direction: column;
-}
+}   
 
 #box2 {
     display:none;
@@ -56,21 +56,13 @@
     padding-top: 28px;
 }
 
-#box1 {
-    display: hide;
-}
-
-#box2 {
-    display:none;
-}
-
-#box3 {
-    display:none;
-}
-
 .title{
     padding: 0px;
     margin: 0px;
+}
+
+.title-switch p {
+    font-weight: bold;
 }
 
 .title-box {
@@ -86,13 +78,18 @@
 }
 
 .switch-options {
+    width: 320px;
+    height: 150px;
     display: flex;
-    flex-direction:column;
-    margin-bottom: 15px;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
+    text-align: center;
+    border: 1px solid #000;
+    border-radius: 5px;
+    cursor: pointer;
+    flex-direction: column;
+    padding: 10px 0;
 }
-
 
 .switch-options input {
     position: absolute !important;
@@ -117,21 +114,6 @@
     text-align: center;
     border: 1px solid rgba(0, 0, 0, 0.2);
     transition: all 0.1s ease-in-out;
-}
-
-.image-switch {
-    width: 322px;
-    height: 135px;
-    color: rgba(0, 0, 0, 0.6);
-    font-size:20px;
-    background-color: #F5F5F5;
-    border: 1px solid #bbb;
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction:column;
-    border: 1px solid #bbb;
-    color: #000;
 }
 
 .image-switch:hover {
@@ -173,7 +155,7 @@ button {
 }
 
 
-#button-continuar {
+.button-box {
     background-color: #e4321e;
     color: #FFF;
     font-weight:bold;
@@ -190,9 +172,22 @@ button:hover {
 
 .button-container {
     display: flex;
+    justify-content: none;
 }
 
-#button-voltar {
+#button-voltar1 {
+    width: 15%;
+    background-color: #e4321e;
+    color: #FFF;
+    font-weight:bold;
+    border:none;
+    border-radius:5px;
+    font-size:20px;
+    margin-top: 30px;
+    margin-right: 5px;
+}
+
+#button-voltar2 {
     width: 15%;
     background-color: #e4321e;
     color: #FFF;
@@ -216,8 +211,14 @@ button:hover {
     margin-left: 5px;
 }
 
-#button-continuar {
+#button-continuar1 {
     width: 100%;
+    height: 50px;
+    font-size: large;
+}
+
+#button-continuar2 {
+    width: 84%;
     height: 50px;
     font-size: large;
 }
@@ -230,27 +231,13 @@ button:hover {
     color:rgb(43, 9, 235);;
 }
 
-.switch-options {
-    width: 320px;
-    height: 150px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    text-align: center;
-    border: 1px solid #000;
-    border-radius: 5px;
-    cursor: pointer;
-    flex-direction: column;
-    padding: 10px 0;
-}
-
-.box input {
+#box1 input {
     border: none;
     width: 0;
     height: 0;
 }
 
-#s1:checked {
+.ativo {
     border: 2px solid #E53420;
     border-radius: 5px;
 }
