--- a/docs/css/header.css
+++ b/docs/css/header.css
@@ -1,54 +1,197 @@
+/* ----- MENU VERSÃO DESKTOP ----- */
+
+:root {
+    --color-background: #0b142f;
+    --color-text: #FFF;
+    --color-active: #e4321e;
+    --color-hover: #e4321e;
+}
+
 #header {
-    background-color: #0b142f;
-    color: #FFF;
     width: 100%;
     height: 130px;
+    background-color: var(--color-background);
+    justify-content: space-between;
+    padding: 0 7%;
+    font-size: 20px;
+    color: var(--color-text);
+}
+
+.header,
+.navigation-header {
     display: flex;
+    flex-direction: row;
     align-items: flex-end;
+    padding-bottom: 15px;
 }
 
-#logo {
-    width: 40%; 
+.navigation-header {
+    z-index: 2;
 }
 
-.menu {
-    padding-top: 85px;
+.navigation-header a {
+    text-decoration: none;
+    color: var(--color-text);
+    transition: 300ms;
+    padding: 5px 15px;
+    margin: 0px 2px;
 }
 
-.menu a {
-    padding: 15px;
+.navigation-header a:hover {
+    background-color: var(--color-hover);
+    border-radius: 5px;
+    transition: none;
 }
+
+.logo-header {
+    padding-bottom: 15px;
+}
+
+#logo-img {
+    width: 300px;
+    height: 70px;
+}
+
+.btn-container {
+    display: none;
+}
+
+.btn-icon-header {
+    color: var(--color-text);
+    font-size: 30px;
+    cursor: pointer;
+    transform: rotate(270deg);
+    display: inline-block;
+    font-weight: bold;
+    border: none;
+    display: none;
+}
+
+.btn-icon-header-x {
+    width: 20px;
+    height: 20px;
+}
+
+.btn-icon-header-x img {
+    width: 100%;
+    height: 100%;
+}
+
 
 .active {
-    background-color: #e4321e;
+    background-color: var(--color-active);
     background-size: 0.5%;
     border-radius: 5px;
 }
 
-.menu-desktop {
-    padding-bottom: 15px;
+
+
+/* ----- MENU VERSÃO MOBILE ----- */
+
+@media screen and (max-width: 1125px) {
+
+    .btn-icon-header,
+    .btn-container {
+        display: block;
+        justify-content: center;
+        align-items: center;
+        transition: 1s;
+        background-color: var(--color-background);
+    }
+
+    .header {
+        align-items: center;
+    }
+
+    .logo-header {
+        padding-top: 25px;
+    }
+
+    .navigation-header {
+        position: absolute;
+        flex-direction: column;
+        align-items: center;
+        top: 0;
+        background-color: var(--color-background);
+        height: 100%;
+        width: 220px;
+        padding: 47px 0px 16px 16px;
+        animation-duration: 1s;
+        margin-left: -100vw;
+    }
+
+    .navigation-header a {
+        text-decoration: none;
+        color: var(--color-text);
+        transition: 300ms;
+        padding: 5px 15px;
+        margin: 5px 2px;
+    }    
+
+    .navigation-header a:hover {
+        background-color: var(--color-hover);
+        border-radius: 5px;
+        transition: none;
+    }
+
+    .btn-icon-x {
+        margin-bottom: 15px ;
+    }
+
+    .active {
+        background-color: var(--color-active);
+        background-size: 0.5%;
+    }
 }
 
-.menu-desktop a {
-    padding: 15px;
+@media screen and (max-width: 550px) {
+    #logo-img {
+        width: 197px;
+        height: 52px;
+    }
 }
 
-.menu-desktop a:hover {
-    background-color: #e4321e;
-    border-radius: 5px;
+@media screen and (max-width: 430px) {
+    #logo-img {
+        width: 150px;
+        height: 35px;
+    }
 }
 
-.icone-mobile {
-    width: 40px;
+
+@keyframes animationBtnburguer {
+    from {
+        margin-left: 0;
+    }
+
+    top {
+        margin-left: -100vw;
+    }
 }
 
-.menu-mobile {
-    display: none;
+@keyframes animationSidebar1 {
+    from {
+        margin-left: -100vw
+    }
+
+    top {
+        margin-left: -10vw
+    }
 }
 
-#logo-mobile {
-    display: none;
+@keyframes animationSidebar2 {
+    from {
+        margin-left: -10vw
+    }
+
+    top {
+        margin-left: -100vw
+    }
 }
+
+
+
+/* ----- FOOTER ----- */
 
 .footer {
     width: 100%;
@@ -66,7 +209,7 @@
 }
 
 .ft-icon {
-    display:flex;
+    display: flex;
     flex-direction: row;
     border-radius: 100%;
     padding: 20px;
@@ -93,81 +236,11 @@
 }
 
 #insta-icon {
-  background: #d6249f;
-  background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%); 
+    background: #d6249f;
+    background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
 }
 
 .ftr_icon {
     width: 25px;
     height: 25px;
-}
-
-@media (max-width: 660px) {
-
-    #logo {
-        display: none;
-    }
-
-    #logo-mobile {
-        display: block;
-    }
-
-    .menu-desktop {
-        display: none;
-    }
-
-    #icone-mobile {
-        padding-top: 10px;
-    }
-
-    #icone-mobile2 {
-        width: 40px;
-    }
-
-    #header {
-        flex-direction: column-reverse;
-        justify-content: space-around;        
-    }
-
-    .menu-mobile {
-        display: flex;
-        flex-direction: column;
-        align-items:center;
-        width: auto;
-        height: 100%;
-        padding-top: 5px;
-    }
-    
-    .menu-mobile-links {
-        display: none;
-        flex-direction: column;
-        background-color: #0b142f; 
-        z-index: 1;
-        margin: 0;
-        justify-content: center;
-        width: 80%;
-
-    }
-
-    .menu-mobile-links a {
-        height: 50px;
-        text-align: center;
-        margin-top: 5px;
-        padding-top: 10px;
-        width: auto;
-        margin: 0;
-    }
-    
-    .active {
-        border-radius: 0;
-    }
-
-    .menu-mobile:hover .menu-mobile-links img {
-        display: block;
-    }
-
-    .menu-mobile-links a:hover {
-        background-color: #e4321e;
-        transition: 0.1s;
-    }
 }
