--- a/docs/css/header.css
+++ b/docs/css/header.css
@@ -22,7 +22,6 @@
     display: flex;
     flex-direction: row;
     align-items: flex-end;
-    padding-bottom: 15px;
 }
 
 .navigation-header {
@@ -77,7 +76,6 @@
     height: 100%;
 }
 
-
 .active {
     background-color: var(--color-active);
     background-size: 0.5%;
@@ -97,6 +95,10 @@
         align-items: center;
         transition: 1s;
         background-color: var(--color-background);
+    }
+
+    .btn-icon-header-X {
+        display: hide;
     }
 
     .header {
