--- a/docs/css/user-recovery.css
+++ b/docs/css/user-recovery.css
@@ -4,8 +4,6 @@
 }
 
 
-
-
 .banner {
     background: url(../assets/images/Imagem-login.jpeg);
     width: 100vw;
@@ -16,90 +14,136 @@
     align-items: center;
 }
 
-
-.box {
-    width: 422px;
-    height: 531px;
-    background-color: #FFF;
-    display: flex;
-    border-radius: 10px;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 20px 50px 20px 50px;
-    margin-top: 140px;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;  
+.controlador-login {
+    height: 175px;
+    padding: 15px;
 }
-
-
-#title-box {
-    text-align: center;
-    font-size: 25px;
-    font-weight: bold;
-    padding-bottom: 20px;
+.recuperar-email {
+    display: flex;
+    flex-direction: column;
     color: black;
 }
 
+.menu-login {
+    width: 425 px;
+    height: 300px;
+    background-color: aliceblue;
+    border-radius: 20px;
+}
 
-.info-boxes input {
+.controlador-login input {
+    width: 320px;
+    height: 35px;
+    padding: 25px;
+    margin-top: 10px;
+}
+
+.menu-list {
+    position: relative;
+}
+
+#btn-recuperar {
+    display: flex;
     width: 322px;
-    height: 59px;
-    border-radius: 5px;
-    border: 1px solid #bbb;
-    background-color: #F5F5F5;
-    padding: 0 10px;
-    margin: 15px;
-    margin-left: 0;
-}
-
-
-.img-recovery {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 150px;
-}
-
-.img-recovery img {
-    width: 135px;
-    height: 135px;
-}
-
-
-button {
-    width: 100%;
     height: 50px;
+    border-radius: 5px;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 10px;
+    background-color: #e4321e;
+    color: #FFF; 
+
+}
+
+.input-login {
+    margin: 0px;
+}
+
+.texto-cadastro {
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-
-#button-enviar {
-    background-color: #e4321e;
-    color: #FFF;
-    font-weight:bold;
-    border:none;
-    border-radius:5px;
-    font-size:20px;
-    margin-top: 27px;
-}
-
-
-button:hover {
-    background-color: #b92716;
-    border-radius: 5px;
-}
-
-
-#voltar-login {
-    display: flex;
+.campos {
+    width: 100%;
+    align-items: center;
     justify-content: center;
-    margin-top: 20px;
-    color:rgb(43, 9, 235);
 }
 
+.campos span, checkbox {
+    padding-right: 75px;
+}
+
+.corpo {
+    margin-top: 45%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+@media only screen and (max-width: 768px) {
+    .banner {
+        background-size: 150%;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: 35%;
+    }
+
+    .menu-login {
+        width: 380px;
+        height: 320px;
+        background-color: rgb(255, 255, 255);
+
+    }
+
+    .controlador-login {
+        width: 250px;
+        height: 190px;
+        margin-bottom: 15px;
+    }
+
+    .controlador-login label {
+        font-size: medium;
+    }
+
+    .controlador-login input {
+        font-size: small;
+        width: 350px;
+        height: 10;
+
+    }
+
+    .campos {
+        width: 100%;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .campos span {
+        font-size: medium;
+        margin-top: 0px;
+    }
+    
+    #btn-recuperar {
+        display: flex;
+        width: 150px;
+        height: 50px;
+        border-radius: 10px;
+        justify-content: center;
+        margin-bottom: 10px;
+        padding-top: 10px;
+        background-color: #e4321e;
+    }
+
+    .texto-cadastro {
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+}
 
 .invalid {
-    border: 2px solid rgb(255, 0, 0);
+    border: 2px solid red;
 }
