--- a/docs/css/header.css
+++ b/docs/css/header.css
@@ -26,6 +26,7 @@
 
 .navigation-header {
     z-index: 2;
+    padding-bottom: 15px;
 }
 
 .navigation-header a {
@@ -99,6 +100,10 @@
 
     .btn-icon-header-X {
         display: hide;
+    }
+
+    #btn-icon {
+        background-color: inherit;
     }
 
     .header {
