--- a/docs/css/perfil.css
+++ b/docs/css/perfil.css
@@ -12,7 +12,7 @@
     align-items: self-end;
 }
 
-.btn-container {
+.button-container {
     height: 50px;
     width: 100px;
     border-radius: 10px 10px 0 0;
