--- a/docs/css/cadastro.css
+++ b/docs/css/cadastro.css
@@ -23,10 +23,12 @@
 
 .container-cadastro {
     display: flex;
-    justify-content:center;
-    align-items:center;
+    justify-content: center;
+    align-items: center;
     padding-top: 125px;
-}   
+}
+
+/* --- BOXES --- */
 
 .box {
     display: flex;
@@ -34,29 +36,33 @@
     height: 531px;
     background-color: #FFF;
     border-radius: 10px;
-    justify-content: space-between;
-    flex-direction: column;
-    padding: 20px 50px 20px 50px;   
+    padding: 20px 50px 20px 50px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 #box1 {
     display: flex;
     align-items: center;
-    justify-content: space-between;
     flex-direction: column;
-}   
+}
+
+#box1 input {
+    border: none;
+    width: 0;
+    height: 0;
+}
 
 #box2 {
-    display:none;
+    display: none;
 }
 
 #box3 {
-    display:none;
-    padding-top: 28px;
+    display: none;
 }
 
-.title{
+/* --- TITLE --- */
+
+.title {
     padding: 0px;
     margin: 0px;
 }
@@ -69,6 +75,7 @@
     text-align: center;
     font-size: 25px;
     font-weight: bold;
+    margin-bottom: 25px;
 }
 
 .subtitle-box {
@@ -77,9 +84,11 @@
     padding-bottom: 10px;
 }
 
+/* --- SWITCH --- */
+
 .switch-options {
     width: 320px;
-    height: 150px;
+    height: 140px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -88,14 +97,14 @@
     border-radius: 5px;
     cursor: pointer;
     flex-direction: column;
-    padding: 10px 0;
+    margin-bottom: 50px;
 }
 
 .switch-options input {
     position: absolute !important;
     clip: rect(0, 0, 0, 0);
-    height: 1px;
-    width: 1px;
+    height: 0px;
+    width: 0px;
     border: 0;
 }
 
@@ -106,7 +115,7 @@
     background-color: #F5F5F5;
     border: 1px solid #bbb;
     color: rgba(0, 0, 0, 0.6);
-    font-size:20px;
+    font-size: 20px;
     font-weight: bold;
     border-radius: 5px;
     width: 320px;
@@ -116,8 +125,19 @@
     transition: all 0.1s ease-in-out;
 }
 
-.image-switch:hover {
+.switch-options label:hover {
     cursor: pointer;
+}
+
+.switch-options input:checked+label {
+    background-color: #E53420;
+    color: #FFF;
+    box-shadow: none;
+}
+
+.switch-options img {
+    width: 100px;
+    height: 100px;
 }
 
 .image-switch img {
@@ -125,14 +145,30 @@
     height: 100px;
 }
 
-.switch-options label:hover {
+.image-switch:hover {
     cursor: pointer;
 }
 
-.switch-options input:checked + label {
-    background-color: #E53420;
-    color: #FFF;
-    box-shadow: none;
+#img-usuario {
+    width: 60px;
+    height: 60px;
+    margin-top: 15px;
+}
+
+.ativo {
+    border: 2px solid #E53420;
+    border-radius: 5px;
+}
+
+/* --- INFO-BOXES --- */
+
+.info-boxes {
+    margin-top: 30px;
+    margin-bottom: 34px;
+}
+
+#info-boxes-box3 {
+    margin-top: 10px;
 }
 
 .info-boxes input {
@@ -146,6 +182,8 @@
     margin-left: 0;
 }
 
+/* --- BUTTON-BOXES --- */
+
 .button-box {
     width: 100%;
     height: 50px;
@@ -154,11 +192,11 @@
     justify-content: center;
     background-color: #e4321e;
     color: #FFF;
-    font-weight:bold;
-    border:none;
-    border-radius:5px;
-    font-size:20px;
-    margin-top: 27px;
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
+    font-size: 20px;
+    cursor: pointer;
 }
 
 button:hover {
@@ -171,15 +209,18 @@ button:hover {
     justify-content: none;
 }
 
+#button-container-box3 {
+    margin-top: 34px;
+}
+
 #button-voltar1 {
     width: 15%;
     background-color: #e4321e;
     color: #FFF;
-    font-weight:bold;
-    border:none;
-    border-radius:5px;
-    font-size:20px;
-    margin-top: 30px;
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
+    font-size: 20px;
     margin-right: 5px;
 }
 
@@ -187,24 +228,11 @@ button:hover {
     width: 15%;
     background-color: #e4321e;
     color: #FFF;
-    font-weight:bold;
-    border:none;
-    border-radius:5px;
-    font-size:20px;
-    margin-top: 30px;
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
+    font-size: 20px;
     margin-right: 5px;
-}
-
-#button-cadastrar {
-    width: 85%;
-    background-color: #e4321e;
-    color: #FFF;
-    font-weight:bold;
-    border:none;
-    border-radius:5px;
-    font-size:20px;
-    margin-top: 30px;
-    margin-left: 5px;
 }
 
 #button-continuar1 {
@@ -214,37 +242,24 @@ button:hover {
 }
 
 #button-continuar2 {
-    width: 84%;
+    width: 85%;
     height: 50px;
     font-size: large;
 }
+
+#button-cadastrar {
+    width: 85%;
+    height: 50px;
+    font-size: large;
+}
+
+/* --- CHECKBOX E TERMOS DE USO --- */
 
 .checkbox_class {
     margin: 18px 0px 5px 0;
 }
 
 #termos-de-uso {
-    color:rgb(43, 9, 235);;
-}
-
-#box1 input {
-    border: none;
-    width: 0;
-    height: 0;
-}
-
-.ativo {
-    border: 2px solid #E53420;
-    border-radius: 5px;
-}
-
-.switch-options img {
-    width: 100px;
-    height: 100px;
-}
-
-#img-usuario {
-    width: 60px;
-    height: 60px;
-    margin-top: 15px;
+    color: rgb(43, 9, 235);
+    ;
 }
