--- a/docs/css/header.css
+++ b/docs/css/header.css
@@ -204,6 +204,7 @@ header {
 
 /* ----- FOOTER ----- */
 
+
 .footer {
     width: 100%;
     height: 10vh;
@@ -223,7 +224,7 @@ header {
 }
 
 .ft-icon {
-    display: flex;
+    display:flex;
     flex-direction: row;
     border-radius: 100%;
     padding: 20px;
@@ -237,9 +238,22 @@ header {
     align-items: center;
 }
 
-#in-icon {
+.in-iconbg {
     background-color: #0a66c2;
-    
+    height: 65px;
+    width: 65px;
+    justify-content: center;
+    align-items: center;
+}
+
+#in-icon {
+    background-image: url("../assets/images/linkedin-in\(1\).svg");
+    z-index: 10;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 25px;
+    padding: 30px;
+
 }
 
 #fb-icon {
@@ -253,11 +267,77 @@ header {
 }
 
 #insta-icon {
-    background: #d6249f;
-    background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+  background: #d6249f;
+  background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%); 
+  
 }
 
 .ftr_icon {
     width: 25px;
     height: 25px;
+    cursor: pointer;
+}
+
+.flex {
+    display: flex !important;
+}
+
+footer {
+    position: relative;
+}
+
+#poplinkedin {
+    flex-direction: column;
+    background-color: #0b142f;
+    color: white;
+    padding: 10px;
+    border-radius: 5px 5px 0 0;
+    z-index: 56;
+    height: 0;
+    display: flex;
+    overflow: hidden;
+    opacity: 0;
+
+    }
+
+#poplinkedin span {
+    padding-bottom: 10px;
+}
+
+#poplinkedin.active {
+    height: 480px;
+    top: -1700px;
+    position: absolute;
+    transform:translateY(130%);
+    transition: top 1s ease-in-out;
+    opacity: 1;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
+.nome-linkedin {
+    padding: 20px;
+}
+
+#poplinkedin div {
+    display: flex;
+}
+
+#poplinkedin a {
+    padding-left: 80px;
+    width: 100%;
+}
+
+#poplinkedin img {
+    height: 50px;
+    width: 50px;
+    border-radius: 100%;
+    align-self: center;
+    position: absolute;
+    left: 5%;
+}
+
+#poplinkedin a:hover {
+    background-color: #e4321e;
 }
